# trippple-action-theremin

./: CMakeLists.txt  LICENSE  README.md  chords.c  chords.h  hc-sr04.c  hc-sr04.h  ssd1306.c  ssd1306.h  theremin.c  upload.sh  usb_descriptors.c
stls/: casev1.stl  footpedalbase.stl  footpedalplate.stl  lidv1.stl
